# sync-benchmarking

./: Cargo.toml  README.md
.github/workflows/: ci.yml
benches/: sync_benchmark.rs
src/: lib.rs
